      Slovak, Swedish
 * Miscellaneous and bugfixes:
   * Added --ignore-fatal-errors option to wmlunits
   * Fixed control transfer after player leaves MP game (bug #13238)
   * Fixed missing unit graphics when loading a start-of-scenario savegame
   * Improved the sorting of the XP and traits columns in the unit list dialog
     (part of bug #13360)

Version 1.6.1:
  * Campaigns:
    * Sceptre of Fire:
      * Fixed a crash at the very end of 'Caverns of Flame'
 * AI:
   * Fixed incorrect handling of poisoning attacks when suggesting best attack 
     in user interface
   * Fixed bug #13295: made enemy_units formula return only those units which
     are not incapacitated (for example, it now ignores stoned units )
 * Editor2:
   * New feature: exporting of selection coordinates to system clipboard
 * Engine Changes
   * better detection of images fiting in a hex, should heavily reduce CPU
   usage
 * Graphics:
   * New portrait for Orc Grunt, Dwarf Fighter (alternative), Goblin Spearman,
     Ogre/Young Ogre, Trapper, Ranger, Huntsman.
   * Added two new snow mountain variants
 * Language and i18n:
   * new translations: Icelandic
   * updated translations: British English, Catalan, Chinese (Simplified),
      Czech, Dutch, German, Finnish, Hebrew, Hungarian, Indonesian, Italian,
      Lithuanian, Norwegian, Polish, Russian, Serbian, Slovak, Swedish, Turkish
 * Multiplayer
   * Fixed missing faction column and misplaced player's name column
     (but faction column is still missing if the host uses 1.6.0)
 * Multiplayer server:
   * Implemented automatic saving of game replays.
   * Implemented the adminmsg command to allow players to send messages to
     currently available admins (FR #9218)
 * Miscellaneous and bugfixes:
   * Fixed an infinite loop issue when no music tracks could be loaded
   * Fixed compilation with -D_GLIBCXX_PARALLEL
   * Fixed handling of floating-point WML constants on localized Windows