@@ -30,6 +30,7 @@ Version 1.6.1+svn:
    * Fixed missing unit graphics when loading a start-of-scenario savegame
    * Improved the sorting of the XP and traits columns in the unit list dialog
      (part of bug #13360)
+   * Enabled hinting for texts displayed by Pango/Cairo (bug #13399)
 
 Version 1.6.1:
   * Campaigns:
